Automatically generate a secret key in the datastore rather than storing it directly in settings

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ git+https://github.com/lukebpotato/djangae.git#egg=djangae
 git+https://github.com/django/django.git@stable/1.6.x#django
 django-secure
 django-csp
+nose
