--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 git+https://github.com/lukebpotato/djangae.git#egg=djangae
-git+https://github.com/django/django.git@stable/1.6.x#django
+django>=1.6.7,<1.7
 django-secure
 django-csp
 nose
