--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,12 @@ handlers:
   static_dir: sitepackages/django/contrib/admin/static/admin/
   secure: always
 
+# Set Django admin to be login:admin as well as Django's is_staff restriction
+- url: /admin.*
+  script: scaffold.wsgi.application
+  secure: always
+  login: admin
+
 - url: /.*
   script: scaffold.wsgi.application
   secure: always
